# tooltrust

./: .gitignore  LICENSE  PUBLIC_SDK_SECURITY_REPORT.md  QUICKSTART.md  README.md
.github/workflows/: publish.yml
adapters/crewai/: __init__.py
adapters/http/: __init__.py
adapters/langchain/: __init__.py
adapters/mcp/: __init__.py
adapters/shell/: __init__.py
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/examples/: basic_tool.py
sdk/python/tooltrust/: __init__.py  atp.py  cli.py  client.py  config.py  ddc.py  errors.py  replay.py  tool.py  verifier.py
sdk/python/tooltrust/adapters/: __init__.py  crewai.py  http_adapter.py  langchain.py  mcp.py  shell_adapter.py
sdk/python/tooltrust_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/typescript/: package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
