[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tooltrust-sdk"
version = "0.1.0"
description = "Tool Trust SDK — wrap AI tools with cryptographic trust certificates"
readme = "../../README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Ardyn Intelligence", email = "engineering@ardyn.ai"}]
keywords = ["ai", "trust", "verification", "tools", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://ardyn.ai"
Repository = "https://github.com/ardynintelligence/tooltrust"
