[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tooltrust-sdk"
version = "0.1.2"
description = "Replayable autonomous tool execution — lightweight trust infrastructure SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Ardyn Intelligence", email = "engineering@ardyn.ai"}]
keywords = ["ai", "trust", "verification", "tools", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://ardyn.ai"
Repository = "https://github.com/Kylewilson04/tooltrust"
